--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,4 +1,4 @@
-global_frame: odom
+global_frame: map
 robot_base_frame: base_link
 update_frequency: 1.0
 publish_frequency: 1.0
@@ -25,13 +25,13 @@ unknown_threshold: 10
 mark_threshold: 0
 #END VOXEL STUFF
 
-transform_tolerance: 2
-obstacle_range: 2
+transform_tolerance: 3
+obstacle_range: 3
 max_obstacle_height: 2.0
 raytrace_range: 3.0
 footprint: [[-0.1625, -0.1625], [-0.1625, 0.1625], [0.1625, 0.1625], [0.23, 0.0], [0.1625, -0.1625]]
 #robot_radius: 0.46
-footprint_padding: 0.01
+footprint_padding: 0.04
 inflation_radius: 0.55
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 100
