--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -25,22 +25,32 @@ unknown_threshold: 10
 mark_threshold: 0
 #END VOXEL STUFF
 
-transform_tolerance: 3
-obstacle_range: 3
+transform_tolerance: 1
+obstacle_range: 2
 max_obstacle_height: 2.0
 raytrace_range: 3.0
 footprint: [[-0.1625, -0.1625], [-0.1625, 0.1625], [0.1625, 0.1625], [0.23, 0.0], [0.1625, -0.1625]]
 #robot_radius: 0.46
-footprint_padding: 0.04
-inflation_radius: 0.55
+footprint_padding: 0.01
+inflation_radius: 0.15
 cost_scaling_factor: 10.0
 lethal_cost_threshold: 100
 observation_sources: scan pointcloudsource
 scan: {
-topic: scan, 
-data_type: LaserScan, 
-observation_persistence: 0.0, 
-marking: true, clearing: true, 
-max_obstacle_height: 0.4, 
-min_obstacle_height: 0.08}
-pointcloudsource: {topic: slam_cloud ,data_type: PointCloud, observation_persistence: 0.0, marking: true, clearing: true, max_obstacle_height: 0.4, min_obstacle_height: 0.08}
+  topic: scan, 
+  data_type: LaserScan, 
+  observation_persistence: 0.0, 
+  marking: true, clearing: true, 
+  max_obstacle_height: 0.4, 
+  min_obstacle_height: 0.08
+  }
+
+pointcloudsource: {
+  topic: slam_cloud ,
+  data_type: PointCloud,
+  observation_persistence: 0.0,
+  marking: true, 
+  clearing: true, 
+  max_obstacle_height: 0.4, 
+  min_obstacle_height: 0.08
+  }
