--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -1,7 +1,7 @@
 local_costmap:
   global_frame: map
   robot_base_frame: base_link
-  update_frequency: .5
+  update_frequency: 1
   publish_frequency: 1.0
   static_map: true
   rolling_window: true
